--- a/mainapp/templates/dashboard.html
+++ b/mainapp/templates/dashboard.html
@@ -9,21 +9,42 @@ d-flex justify-content-center align-items-center
 
 {% block content %}
 
-<div class="text-bg-secondary p-4 m-2 bordered rounded rounded-lg">
+<div class="text-bg-secondary p-4 m-2 border rounded rounded-lg">
   <h1 class="mt-4 text-center">Welcome, {{request.user.display_name}}</h1>
-  <form method="post" class="d-grid justify-content-center align-items-end p-2">
+  <form
+    method="post"
+    class="d-grid justify-content-center align-items-end p-2"
+    novalidate
+  >
     {% csrf_token %} {{ form.post_content }}
-    <a class="btn btn-primary" data-id="mymap" onclick="showMapFunc(this);">
+    <a class="btn btn-primary map-open-btn" id="select_mymap" data-id="mymap">
       Select Location
+    </a>
+    <a
+      class="btn btn-primary visually-hidden map-close-btn"
+      id="close_mymap"
+      data-id="mymap"
+    >
+      Close Map
     </a>
     <input type="hidden" id="lat_mymap" name="loc_lat" />
     <input type="hidden" id="lon_mymap" name="loc_lon" />
+    <!-- prettier-ignore -->
+    {% if form.errors %}
+    <div class="alert alert-danger">
+      {% for field, errors in form.errors.items %} {% for error in errors %}
+      <p><strong>{{ field|capfirst }}</strong>: {{ error }}</p>
+      {% endfor %} {% endfor %} {% for error in form.non_field_errors %}
+      <p>{{ error }}</p>
+      {% endfor %}
+    </div>
+    {% endif %}
     <button type="submit" class="btn btn-primary mt-2" name="post">Post</button>
   </form>
-  <div id="mymap" style="height: 200px; display: none"></div>
+  <div class="visually-hidden" id="peta_mymap" style="height: 200px"></div>
 </div>
 
-<div class="bg-primary p-4 m-2 bordered rounded d-flex flex-column gap-3">
+<div class="bg-primary p-4 m-2 border rounded d-flex flex-column gap-3">
   {% for post in posts %}
   <!-- prettier-ignore -->
   {% include "include/post_snippet.html" with post=post %}
@@ -32,7 +53,7 @@ d-flex justify-content-center align-items-center
 </div>
 
 <div
-  class="d-flex justify-content-center align-items-center m-3 px-2 py-2 text-center bg-light bordered rounded"
+  class="d-flex justify-content-center align-items-center m-3 px-2 py-2 text-center bg-light border rounded"
 >
   {% if page_obj.has_previous %}
   <div class="col">
